员工分页,mybatisplus分页实现

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,7 +19,7 @@ mybatis-plus:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
   global-config:
     db-config:
-      id-type: ID_WORKER
+      id-type: ASSIGN_ID
 #reggie:
 #  path: "E:/img/"
 
