图片上传下载

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,8 +20,8 @@ mybatis-plus:
   global-config:
     db-config:
       id-type: ASSIGN_ID
-#reggie:
-#  path: "E:/img/"
+reggie:
+  path: "D:/upload/"
 
 
 
